[gd_scene load_steps=2 format=2]

[ext_resource path="res://CreateEnemies.gd" type="Script" id=3]

[node name="Enemies" type="YSort"]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="TopLeft" type="Position2D" parent="."]

[node name="BottomRight" type="Position2D" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
